--- a/public/index.html
+++ b/public/index.html
@@ -349,9 +349,11 @@
                         <!-- ======= Portfolio item start ============== -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="img/porj-1.png" alt="">
-                                </div>
+                                <a href="https://nikhil-hade.web.app">
+                                    <div class="portfolio-img">
+                                        <img src="img/porj-2.png" alt="">
+                                     </div>
+                                </a>
                             </div>
                         </div>
                         <!-- ======= Portfolio item End ============== -->
