--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css file/style1.0.css">
     <link rel="stylesheet" href="css file/skins/color-10.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <script src="https://kit.fontawesome.com/700485b3f0.js" crossorigin="anonymous"></script>
     <!-- ====== Style switcher files ====== ---->
     <link rel="stylesheet" href="css file/skins/color-10.css" class="alternate-style" title="color-1" disabled>
     <link rel="stylesheet" href="css file/skins/color-2.css" class="alternate-style" title="color-2" disabled>
@@ -80,13 +81,13 @@
                                 <div class="personal-info padd-15">
                                     <div class="row">
                                         <div class="info-item padd-15">
-                                            <p>Birthday : <span>21 july 2000</span></p>
+                                            <p>Birthday : <span>21 july</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Age : <span>22</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Website : <span>www.nikhilhade.com</span></p>
+                                            <p>Website : <span>https://nikhil-hade.web.app</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Email : <span>nikhilhade21@gmail.com</span></p>
@@ -147,6 +148,20 @@
                                                 <div class="skill-percent">81%</div>
                                             </div>
                                         </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>SQL</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 78%"></div>
+                                                <div class="skill-percent">75%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>React</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 78%"></div>
+                                                <div class="skill-percent">66%</div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -164,7 +179,7 @@
                                                     </h3>
                                                     <h4 class="timeline-title">10th (CBSE)</h4>
                                                     <p class="timeline-text">From DR. R. Lahoti CBSE School, Sultanpue. From Central Board of Secondary Education.
-                                                    <br /> I got <b>8.6 CGPA</b> in 10th class.</p>
+                                                    <br /> I got <b>8.6 CGPA(81%)</b> in 10th class.</p>
                                                 </div>
                                                 <!-- ===== timeline ===== -->
                                                  <div class="timeline-item">
@@ -200,7 +215,7 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        <i class="fa fa-calendar"></i> 2022
                                                     </h3>
                                                     <h4 class="timeline-title">Portfolio Website</h4>
                                                     <p class="timeline-text">Created a portfolio website for highlighting my projects and skills. It is fully responsive 
@@ -210,7 +225,7 @@
                                                  <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        <i class="fa fa-calendar"></i> 2022
                                                     </h3>
                                                     <h4 class="timeline-title">Food Ordering Website</h4>
                                                     <p class="timeline-text">The user can see the listed foods and can add them to cart and can place the order the 
@@ -220,7 +235,7 @@
                                                  <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2013 - 2015
+                                                        <i class="fa fa-calendar"></i> 2022
                                                     </h3>
                                                     <h4 class="timeline-title">Todos Table</h4>
                                                     <p class="timeline-text">It is helpful in planning our daily schedules. We can add more tasks at any time and delete a task that is completed.
@@ -312,7 +327,7 @@
                                 <div class="icon">
                                     <i class="fa fa-bullhorn"></i>
                                 </div>
-                                <h4>Keep Safe</h4>
+                                <h4>Safe</h4>
                                 <p>
                                 </p>
                             </div>
@@ -333,23 +348,25 @@
                      <div class="row">
                         <div class="portfolio-heading padd-15">
                             <h2>My Last Projects:</h2>
+                            <h3>click on Project to visit</h3>
                         </div>
                      </div>
                      <div class="row">
                         <!-- ======= Portfolio item start ============== -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="img/porj-1.png" alt="">
-                                    <h4 class="hhh2">Portfolio Website</h4>
-                                </div>
+                                <a href="https://nikhil-hade.web.app">
+                                    <div class="portfolio-img">
+                                        <img src="img/porj-1.png" alt="">
+                                    </div>
+                                </a>
                             </div>
                         </div>
                         <!-- ======= Portfolio item End ============== -->
                         <!-- ======= Portfolio item start ============== -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
-                                <a href="https://nikhil-hade.web.app">
+                                <a href="https://stocktpro.netlify.app/">
                                     <div class="portfolio-img">
                                         <img src="img/porj-2.png" alt="">
                                      </div>
@@ -411,15 +428,15 @@
                         <!-- Contact info item start-->
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-phone"></i></div>
-                            <h4>Call Us On</h4>
+                            <h4>Contact</h4>
                             <P>+91 7030878343</P>
                         </div>
                         <!-- Contact info item end-->
                         <!-- Contact info item start-->
                         <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-                            <h4>Office</h4>
-                            <P>Pune</P>
+                            <div class="icon"><i class="fa fa-linkedin"></i></div>
+                            <h4>Linkedin</h4>
+                            <P>Nikhil-hade</P>
                         </div>
                         <!-- Contact info item end-->
                         <!-- Contact info item start-->
@@ -433,7 +450,7 @@
                         <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-globe-europe"></i></div>
                             <h4>Website</h4>
-                            <P>Nikhilhade.com</P>
+                            <P>https://nikhil-hade.web.app</P>
                         </div>
                         <!-- Contact info item end-->
                      </div>
