--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                             <h3 class="hello">Hello, my name is <span class="name">Nikhil Hade</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">web desinger</span></h3>
                             <p>I'm a Computer Science Student and an Aspiring Software Engineer.</p>
-                            <a href="https://drive.google.com/file/d/16vMY0cfnsKRXfA56xTQZlaIt7F8iUVBZ/view?usp=drivesdk" class="btn">Download CV</a>
+                            <a href="https://drive.google.com/file/d/1oXoo1iSgUhZGAZojrC0gr3Y8UycGzEla/view?usp=drivesdk" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="img/nikhilx.jpg" alt="">
@@ -114,7 +114,7 @@
                                 <div class="skills padd-15">
                                     <div class="row">
                                         <div class="skill-item padd-15">
-                                            <h5>JS</h5>
+                                            <h5>JavaScript</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 71%"></div>
                                                 <div class="skill-percent">69%</div>
@@ -156,7 +156,7 @@
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>React</h5>
+                                            <h5>React Js</h5>
                                             <div class="progress">
                                                 <div class="progress-in" style="width: 78%"></div>
                                                 <div class="skill-percent">66%</div>
@@ -240,6 +240,9 @@
                                                     <h4 class="timeline-title">Todos Table</h4>
                                                     <p class="timeline-text">It is helpful in planning our daily schedules. We can add more tasks at any time and delete a task that is completed.
                                                       with this the most important tasks at the top of the list.
+
+
+
                                                     </p>
                                                  </div>
                                             </div>
@@ -348,12 +351,11 @@
                      <div class="row">
                         <div class="portfolio-heading padd-15">
                             <h2>My Last Projects:</h2>
-                            <h3>click on Project to visit</h3>
                         </div>
                      </div>
                      <div class="row">
                         <!-- ======= Portfolio item start ============== -->
-                        <div class="portfolio-item padd-15">
+                        <!-- <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
                                 <a href="https://nikhil-hade.web.app">
                                     <div class="portfolio-img">
@@ -361,42 +363,22 @@
                                     </div>
                                 </a>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- ======= Portfolio item End ============== -->
                         <!-- ======= Portfolio item start ============== -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
-                                <a href="https://stocktpro.netlify.app/">
                                     <div class="portfolio-img">
                                         <img src="img/porj-2.png" alt="">
-                                     </div>
-                                </a>
-                            </div>
-                        </div>
-                        <!-- ======= Portfolio item End ============== -->
-                        <!-- ======= Portfolio item start ============== -->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="img/porj-1.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                         <!-- ======= Portfolio item End ============== -->
-                         <!-- ======= Portfolio item start ============== -->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="img/porj-1.png" alt="">
-                                </div>
-                            </div>
-                        </div>
-                         <!-- ======= Portfolio item End ============== -->
-                         <!-- ======= Portfolio item start ============== -->
-                        <div class="portfolio-item padd-15">
-                            <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="img/porj-1.png" alt="">
+                                    </div>
+                                <div class="portfolio-heading text padd-15">
+                                    <h2>Trading App</h2>
+                                    <p>Technologies Used:- React Js | Bootstrap | Finnhub Api | Apex Chart | Axios <br>
+                                        Explore stocks effortlessly with a React app powered by FinnHub API. Search, add to your
+                                        watchlist, and delve into detailed stock information with dynamic graphs using ApexCharts,
+                                        all presented in a sleek Bootstrap interface.
+                                    </p>
+                                    <a href="https://stocktpro.netlify.app" class="btn btn-primary" target="_blank">Visit Project</a>
                                 </div>
                             </div>
                         </div>
@@ -404,12 +386,47 @@
                         <!-- ======= Portfolio item start ============== -->
                         <div class="portfolio-item padd-15">
                             <div class="portfolio-item-inner shadow-dark">
-                                <div class="portfolio-img">
-                                    <img src="img/porj-1.png" alt="">
+                                    <div class="portfolio-img">
+                                        <img src="img/porj-1.png" alt="">
+                                    </div>
+                                <div class="portfolio-heading text padd-15">
+                                    <h2>Portfolio Website</h2>
+                                    <p>Technologies used:- JavaScript | HTML | CSS | Firebase <br>
+                                        Created a portfolio website for highlighting my projects and skills. It is fully responsive 
+                                        website with the devices like mobile, PC and tablet. The Website is fully interactive visitor 
+                                        can submit the contact form. this portfolio site are deploy on the firebase.
+                                    </p>
+                                    <a href="https://nikhil-hade.web.app" class="btn btn-primary" target="_blank">Visit Project</a>
+                                </div>
+                            </div>
+                        </div>                        
+                        <!-- ======= Portfolio item End ============== -->
+                         <!-- ======= Portfolio item start ============== -->
+                         <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="img/porj-3.png" alt="">
+                                    </div>
+                                <div class="portfolio-heading text padd-15">
+                                    <h2>Chat App</h2>
+                                    <p>Technologies Used:- React Js | Express | React Chat Engine | Axios | Netlify | Render <br>
+                                        Empower seamless communication with a real-time chat app built on React, React Chat Engine, 
+                                        and Express. Users can effortlessly sign up, log in securely, and engage in dynamic conversations 
+                                        with peers, all hosted on Netlify for a smooth and responsive experience.
+                                    </p>
+                                    <a href="https://chat-n.netlify.app" class="btn btn-primary" target="_blank">Visit Project</a>
                                 </div>
                             </div>
                         </div>
+                         <!-- ======= Portfolio item End ============== -->
+                         <!-- ======= Portfolio item start ============== -->
+
                         <!-- ======= Portfolio item End ============== -->
+                        <!-- ======= Portfolio item start ============== -->
+
+                        <!-- ======= Portfolio item End ============== -->
+                        
+                         <!-- ======= Portfolio item End ============== -->
                      </div>
                  </div>
               </section>
