--- a/public/index.html
+++ b/public/index.html
@@ -420,7 +420,23 @@
                         </div>
                          <!-- ======= Portfolio item End ============== -->
                          <!-- ======= Portfolio item start ============== -->
-
+                         <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="img/porj-4.png" alt="">
+                                    </div>
+                                <div class="portfolio-heading text padd-15">
+                                    <h2>Tic Tac Toe</h2>
+                                    <p>Technologies Used:- React Js | Netlify <br>
+                                        Experience the classic game of Tic Tac Toe brought to life with a modern twist in this React-powered web
+                                        application. Immerse yourself in a sleek and responsive user interface crafted with HTML and CSS, providing
+                                        a visually appealing and intuitive gaming experience. Deployed seamlessly on Netlify, enjoy the convenience 
+                                        of accessible online gameplay anytime, anywhere.
+                                    </p>
+                                    <a href="https://tictactoerush.netlify.app/" class="btn btn-primary" target="_blank">Visit Project</a>
+                                </div>
+                            </div>
+                        </div>
                         <!-- ======= Portfolio item End ============== -->
                         <!-- ======= Portfolio item start ============== -->
 
@@ -514,7 +530,7 @@
                 </div>
               </section>
               <!-- ======= Contact section End ============== -->
-         </div>
+         </div> 
         <!-- ======= main content end ============== -->
     </div>
     <!-- ===== main container end ========  -->
