--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Nikhil Hade</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">web desinger</span></h3>
-                            <p>I'm a Computer Science Student and an A Aspiring Software Engineer.</p>
+                            <p>I'm a Computer Science Student and an Aspiring Software Engineer.</p>
                             <a href="https://drive.google.com/file/d/1tKjDviD1td84wcO_yO6dDlBJ1-vSewXn/view?usp=drivesdk" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
