--- a/public/index.html
+++ b/public/index.html
@@ -409,7 +409,7 @@
                                     </div>
                                 <div class="portfolio-heading text padd-15">
                                     <h2>Chat App</h2>
-                                    <p>Technologies Used:- React Js | Express | React Chat Engine | Axios | Netlify | Render <br>
+                                    <p>Technologies Used:- React JS | Express JS | React Chat Engine | Axios | Netlify  <br>
                                         Empower seamless communication with a real-time chat app built on React, React Chat Engine, 
                                         and Express. Users can effortlessly sign up, log in securely, and engage in dynamic conversations 
                                         with peers, all hosted on Netlify for a smooth and responsive experience.
@@ -427,7 +427,7 @@
                                     </div>
                                 <div class="portfolio-heading text padd-15">
                                     <h2>Tic Tac Toe</h2>
-                                    <p>Technologies Used:- React Js | Netlify <br>
+                                    <p>Technologies Used:- React JS | Netlify <br>
                                         Experience the classic game of Tic Tac Toe brought to life with a modern twist in this React-powered web
                                         application. Immerse yourself in a sleek and responsive user interface crafted with HTML and CSS, providing
                                         a visually appealing and intuitive gaming experience. Deployed seamlessly on Netlify, enjoy the convenience 
@@ -438,6 +438,23 @@
                             </div>
                         </div>
                         <!-- ======= Portfolio item End ============== -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="img/porj-5.png" alt="">
+                                    </div>
+                                <div class="portfolio-heading text padd-15">
+                                    <h2>Foood Order</h2>
+                                    <p>Technologies Used:- React JS | Firebase  <br>
+                                        Experience the classic game of Tic Tac Toe brought to life with a modern twist in this React-powered web
+                                        application. Immerse yourself in a sleek and responsive user interface crafted with HTML and CSS, providing
+                                        a visually appealing and intuitive gaming experience. Deployed seamlessly on Netlify, enjoy the convenience 
+                                        of accessible online gameplay anytime, anywhere.
+                                    </p>
+                                    <a href="https://tictactoerush.netlify.app/" class="btn btn-primary" target="_blank">Visit Project</a>
+                                </div>
+                            </div>
+                        </div>
                         <!-- ======= Portfolio item start ============== -->
 
                         <!-- ======= Portfolio item End ============== -->
