github link updated

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
                             <h3 class="my-profession">I'm a <span class="typing">web desinger</span></h3>
                             <p>I'm a Computer Science Student and an Aspiring Software Engineer.</p>
                             <a href="./img/Nikhil Hade CV1.pdf" class="btn">Download CV</a>
+                            <a href="https://github.com/Nikhilhade21"  class="btn" target="_blank">Visit GitHub</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="img/nikhilx.jpg" alt="">
