--- a/public/index.html
+++ b/public/index.html
@@ -457,7 +457,22 @@
                             </div>
                         </div>
                         <!-- ======= Portfolio item start ============== -->
-
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                    <div class="portfolio-img">
+                                        <img src="img/porj-6.png" alt="">
+                                    </div>
+                                <div class="portfolio-heading text padd-15">
+                                    <h2>Text Recoder</h2>
+                                    <p>Technologies Used:- HTML CSS JS | Netlify  <br>
+                                        Built with HTML, CSS, and JavaScript, this project captures every modification in real-time and stores it with 
+                                        precise timestamps. Users can start recording their text input, stop the recording at any time, and then replay 
+                                        their entire session, seeing the text reappear exactly as it was entered. .
+                                    </p>
+                                    <a href="https://textrecorder.netlify.app/" class="btn btn-primary" target="_blank">Visit Project</a>
+                                </div>
+                            </div>
+                        </div>
                         <!-- ======= Portfolio item End ============== -->
                         
                          <!-- ======= Portfolio item End ============== -->
